cs-proxy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-proxy
  namespace: codelearn
  labels:
    app: cs-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cs-proxy
  template:
    metadata:
      labels:
        app: cs-proxy
    spec:
      containers:
        - name: cs-proxy
          image: ghcr.io/dedkola/cs-proxy:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
